syntax = "proto3";
package go-bitsong.fantoken;

import "gogoproto/gogo.proto";
import "fantoken/fantoken.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/bitsongofficial/ledger/x/fantoken/types";

// GenesisState defines the fantoken module's genesis state
message GenesisState {
    Params params = 1 [ (gogoproto.nullable) = false ];
    repeated FanToken tokens = 2 [ (gogoproto.nullable) = false ];
    repeated cosmos.base.v1beta1.Coin burned_coins = 3
        [ (gogoproto.nullable) = false ];
}
